--- a/.github/workflows/build-queues-1412.yaml
+++ b/.github/workflows/build-queues-1412.yaml
@@ -19,6 +19,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-22.04
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     strategy:
       fail-fast: false
       matrix:
