--- a/.github/workflows/discovery-compatability-tests.yaml
+++ b/.github/workflows/discovery-compatability-tests.yaml
@@ -16,16 +16,18 @@ on:
 jobs:
   build:
     runs-on: ubuntu-22.04
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     strategy:
       fail-fast: false
       matrix:
         coherenceVersion:
-          - 22.06.11
-          - 22.06.12-SNAPSHOT
+          - 22.06.12
+          - 22.06.13-SNAPSHOT
           - 24.09.3
-          - 25.03
-          - 14.1.2-0-1
-          - 14.1.2-0-2-SNAPSHOT
+          - 25.03.1
+          - 14.1.2-0-2
+          - 14.1.2-0-3-SNAPSHOT
         go-version:
           - 1.23.x
           - 1.24.x
