--- a/.github/workflows/examples-v1.2.2.yaml
+++ b/.github/workflows/examples-v1.2.2.yaml
@@ -17,6 +17,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-22.04
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     strategy:
       fail-fast: false
       matrix:
