--- a/.github/workflows/resolver-compatability-tests.yaml
+++ b/.github/workflows/resolver-compatability-tests.yaml
@@ -66,7 +66,7 @@ jobs:
       shell: bash
       run: |
         export COHERENCE_VERSION=${{ matrix.coherenceVersion }}
-        curl -sL https://raw.githubusercontent.com/oracle/coherence-cli/main/scripts/install.sh | bash
+        curl --retry 5 --retry-delay 2 -sL https://raw.githubusercontent.com/oracle/coherence-cli/main/scripts/install.sh | bash
         cohctl version
         cohctl create cluster grpc-cluster -v ${{ matrix.coherenceVersion }} -y -a coherence-grpc-proxy 
         sleep 20
