--- a/.github/workflows/streaming-jakarta.yaml
+++ b/.github/workflows/streaming-jakarta.yaml
@@ -5,7 +5,7 @@
 # ---------------------------------------------------------------------------
 # Coherence Go Client GitHub Actions test streaming against v23.03+
 # ---------------------------------------------------------------------------
-name: CI-Examples Jakarta
+name: CI-Streaming Jakarta
 
 on:
   workflow_dispatch:
@@ -16,6 +16,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-22.04
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     strategy:
       fail-fast: false
       matrix:
