--- a/scripts/kind/coherence-cluster.yaml
+++ b/scripts/kind/coherence-cluster.yaml
@@ -8,14 +8,14 @@ metadata:
 spec:
   jvm:
     memory:
-      initialHeapSize: 1g
+      initialHeapSize: $INITIAL_HEAP
       maxHeapSize: 1g
   replicas: 3
   readinessProbe:
     initialDelaySeconds: 10
     periodSeconds: 10
   suspendServicesOnShutdown: false
-  image: "ghcr.io/oracle/coherence-ce:14.1.2-0-1-java17"
+  image: "ghcr.io/oracle/coherence-ce:14.1.2-0-2-java17"
   imagePullPolicy: IfNotPresent
   coherence:
     management:
