--- a/.github/workflows/build-compatability-1412.yaml
+++ b/.github/workflows/build-compatability-1412.yaml
@@ -75,7 +75,7 @@ jobs:
       shell: bash
       run: |
         echo "Running verify against $COH_VERSION"
-        go get google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.36.6
+        go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.5.1
         COHERENCE_BASE_IMAGE=gcr.io/distroless/java17-debian12 INCLUDE_LONG_RUNNING=true COHERENCE_VERSION=$COH_VERSION PROFILES=,-jakarta,javax make clean generate-proto generate-proto-v1 build-test-images test-e2e-standalone
 
     - name: E2E Local Tests With Scope
