--- a/.github/workflows/build-v1.yaml
+++ b/.github/workflows/build-v1.yaml
@@ -72,7 +72,7 @@ jobs:
     - name: gRPC V1 Base Tests
       shell: bash
       run: |
-        go get google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.36.6
+        go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.5.1
         COHERENCE_BASE_IMAGE=gcr.io/distroless/java17-debian12 PROFILES=,jakarta,-javax COHERENCE_VERSION=${{ matrix.coherence-version }} make clean generate-proto generate-proto-v1 build-test-images test-v1-base
 
     - uses: actions/upload-artifact@v4
