--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -67,7 +67,7 @@ jobs:
     - name: E2E Local Tests
       shell: bash
       run: |
-        go get google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.36.6
+        go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.5.1
         INCLUDE_LONG_RUNNING=true PROFILES=,-jakarta,javax COHERENCE_VERSION=22.06.12 make clean generate-proto build-test-images test-e2e-standalone
 
     - name: Profile Near Cache
@@ -84,7 +84,7 @@ jobs:
     - name: E2E Local Tests With Scope
       shell: bash
       run: |
-        go get google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.36.6
+        go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.5.1
         SKIP_PROTO_GENERATION=true COHERENCE_VERSION=22.06.12 PROFILES=,-jakarta,javax,scope make clean generate-proto build-test-images test-e2e-standalone-scope
 
     - uses: actions/upload-artifact@v4
