--- a/.github/workflows/examples-jakarta.yaml
+++ b/.github/workflows/examples-jakarta.yaml
@@ -70,7 +70,7 @@ jobs:
     - name: Verify Examples
       shell: bash
       run: |
-        go get google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.36.6
+        go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.5.1
         COHERENCE_BASE_IMAGE=gcr.io/distroless/java17-debian12 COHERENCE_VERSION=${{ matrix.coherenceVersion }} PROFILES=,jakarta,-javax make clean generate-proto build-test-images test-cluster-startup test-examples
         make test-cluster-shutdown || true
 
