--- a/.github/workflows/build-compatability-2206.yaml
+++ b/.github/workflows/build-compatability-2206.yaml
@@ -75,7 +75,7 @@ jobs:
       shell: bash
       run: |
         echo "Running verify against $COH_VERSION"
-        go get google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.3.0
+        go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.5.1
         COHERENCE_BASE_IMAGE=gcr.io/distroless/java17-debian12 INCLUDE_LONG_RUNNING=true COHERENCE_VERSION=$COH_VERSION PROFILES=,-jakarta,javax make clean generate-proto build-test-images test-e2e-standalone
 
     - name: E2E Local Tests With Scope
@@ -83,7 +83,7 @@ jobs:
         COH_VERSION: ${{ matrix.coherenceVersion }}
       shell: bash
       run: |
-        go get google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.3.0
+        go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.5.1
         SKIP_PROTO_GENERATION=true COHERENCE_BASE_IMAGE=gcr.io/distroless/java17-debian12 COHERENCE_VERSION=$COH_VERSION PROFILES=,-jakarta,javax,scope make clean generate-proto build-test-images test-e2e-standalone-scope
 
     - uses: actions/upload-artifact@v4
@@ -104,7 +104,7 @@ jobs:
       shell: bash
       run: |
         echo "Running verify against $COH_VERSION"
-        go get google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.3.0
+        go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.5.1
         SKIP_PROTO_GENERATION=true COHERENCE_BASE_IMAGE=gcr.io/distroless/java17-debian12 SECURE=true COHERENCE_IGNORE_INVALID_CERTS=true INCLUDE_LONG_RUNNING=true \
           COHERENCE_TLS_CERTS_PATH=`pwd`/test/utils/certs/guardians-ca.crt \
           COHERENCE_TLS_CLIENT_CERT=`pwd`/test/utils/certs/star-lord.crt \
