--- a/.github/workflows/build-dapr-tls.yaml
+++ b/.github/workflows/build-dapr-tls.yaml
@@ -74,7 +74,7 @@ jobs:
       shell: bash
       run: |
         go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.5.1
-        COHERENCE_BASE_IMAGE=gcr.io/distroless/java17-debian12 PROFILES=,jakarta,-javax COHERENCE_VERSION=$COH_VERSION make certs clean generate-proto generate-proto-v1 build-test-images test-cluster-startup
+        COHERENCE_BASE_IMAGE=gcr.io/distroless/java17-debian12 PROFILES=,secure,jakarta,-javax COHERENCE_VERSION=$COH_VERSION make certs clean generate-proto generate-proto-v1 build-test-images test-cluster-startup
         make test-dapr
         make test-cluster-shutdown
 
