--- a/.github/workflows/build-dapr-tls.yaml
+++ b/.github/workflows/build-dapr-tls.yaml
@@ -26,7 +26,8 @@ jobs:
       matrix:
         coherenceVersion:
           - 25.09-SNAPSHOT
-          - 25.03.3
+          - 25.03.3-SNAPSHOT
+          - 25.03.2
         go-version:
           - 1.24.x
 
