--- a/.github/workflows/build-dapr.yaml
+++ b/.github/workflows/build-dapr.yaml
@@ -27,6 +27,7 @@ jobs:
         coherenceVersion:
           - 25.09-SNAPSHOT
           - 25.03.2
+          - 25.03.3-SNAPSHOT
         go-version:
           - 1.24.x
 
